# JuntosHQ

./: .dockerignore  .env.example  .flaskenv  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  cloudbuild.yaml  keys1.txt  pyproject.toml
.claude/: settings.local.json
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 1386dda8d17b_add_is_public_to_junto.py  61bcc47d28e3_merge_heads.py  693e2651098b_expand_models_and_invites.py  a1b2c3d4e5f6_add_is_public_drop_commitment_uq.py  b7c8d9e0f1a2_add_chat_tables_and_chatbot_fields.py  bcfd19a7fddb_add_user_table_and_junto_owner.py  c44433b1879f_add_meeting_attendance_and_junto_tier.py  d1e2f3a4b5c6_add_subscription_tier_to_user.py  e2f3a4b5c6d7_add_stripe_fields_to_user.py  f0a1b2c3d4e5_add_coupon_gating.py  f8a5594ef175_add_commitment_table.py
docs/: alpha-status.md  architecture.md  authentication.md  authorization.md  configuration.md  database.md  deployment-gcp.md  getting-started.md  index.md  models.md  postgresql.md  production-checklist.md  routes.md  testing.md
docs/features/: ben-franklin-chatbot.md  ben-response-evaluation.md  commitments-tracking.md  coupon-based-invitation.md  discussion-prompts.md  expanded-tier.md  free-tier.md  meeting-log.md  mobile-responsive-layout.md  standard-tier.md  subscription-tiers.md  unlimited-tier.md
screenshots/: debug_live.html
scripts/: backfill_junto_tiers.py  ben_system_prompt.txt  debug_live.py  fetch_founders_franklin.py  fetch_franklin_corpus.py  fetch_franklin_letters.py  fix_migration_heads.py  migrate_sqlite_to_pg.py  pgvector.sql  process_founders_franklin.py  seed.py  seed_franklin.py  setup-secrets.sh  test_data.py  ui_check.py
scripts/franklin_corpus/: junto_rules.txt
src/juntos/: __init__.py  auth_utils.py  ben_rag.py  cli.py  config.py  franklin.py  models.py  seed.py
src/juntos/routes/: auth.py  billing.py  chat.py  (+6 more)
tests/: conftest.py  test_app.py  test_auth.py  test_billing.py  test_chat.py  test_commitments.py  test_coupons.py  test_invites.py  test_juntos.py  test_meetings.py  test_members.py  test_visibility.py
(+20 files in other folders)
