[project]
name = "juntos"
version = "0.1.0"
description = "A global organizational structure centered around Ben Franklin's juntos concept"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1",
    "flask-sqlalchemy>=3.1",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "authlib>=1.3.2",
    "requests>=2.32",
    "python-dotenv>=1.2.1",
    "flask-mail>=0.9",
    "mistune>=3.0",
    "anthropic>=0.40",
    "openai>=2.20.0",
    "sqlalchemy>=2.0.46",
    "tiktoken>=0.12.0",
    "psycopg2-binary>=2.9.11",
    "beautifulsoup4>=4.14.3",
    "sentence-transformers>=5.2.2",
    "voyageai>=0.3.2",
    "stripe>=10.0",
    "fpdf2>=2.8",
    "gunicorn>=23.0",
]

[project.scripts]
juntos = "juntos.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
# Long historical quotations and seed strings cannot be meaningfully wrapped
"src/juntos/franklin.py" = ["E501"]
"src/juntos/seed.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/juntos"]
